correct portfolio imagallery border gap on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,9 @@ footer {
 
   @media only screen and (max-width:4in) {
     .imgThumb {
+        width: 100%
+    }
+    img.imgThumb {
         width: 100%;
         height: auto;
     }
